methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:12: error: too many arguments for method droite: ()Unit
  droite(2)
        ^FlowerPot:14: error: too many arguments for method droite: ()Unit
  droite(2)
        ^